[tool.poetry][tool.poetry.dependencies]
pytest = "^7.0.0"name = "livecodebench"[tool.poetry.dependencies]
pytest = "^7.0.0"version = "0.1.0"[tool.poetry.dependencies]
pytest = "^7.0.0"description = "Official Repository for Evaluation of LiveCodeBench"[tool.poetry.dependencies]
pytest = "^7.0.0"authors = ["Naman Jain <naman1205jain@gmail.com>"][tool.poetry.dependencies]
pytest = "^7.0.0"readme = "README.md"[tool.poetry.dependencies]
pytest = "^7.0.0"[tool.poetry.dependencies]
pytest = "^7.0.0"[[tool.poetry.source]][tool.poetry.dependencies]
pytest = "^7.0.0"name = 'pypi_'  # needed until python-poetry/poetry#3456 is resolved.[tool.poetry.dependencies]
pytest = "^7.0.0"url = 'https://pypi.org/simple'[tool.poetry.dependencies]
pytest = "^7.0.0"priority = 'primary'[tool.poetry.dependencies]
pytest = "^7.0.0"[tool.poetry.dependencies]
pytest = "^7.0.0"[tool.poetry.dependencies][tool.poetry.dependencies]
pytest = "^7.0.0"python = ">=3.10 <4"[tool.poetry.dependencies]
pytest = "^7.0.0"pebble = "^5.0.7"[tool.poetry.dependencies]
pytest = "^7.0.0"datasets = "^2.18.0"[tool.poetry.dependencies]
pytest = "^7.0.0"google-generativeai = "^0.5.0"[tool.poetry.dependencies]
pytest = "^7.0.0"anthropic = "^0.25.1"[tool.poetry.dependencies]
pytest = "^7.0.0"openai = "^1.17.1"[tool.poetry.dependencies]
pytest = "^7.0.0"mistralai = "^0.1.8"[tool.poetry.dependencies]
pytest = "^7.0.0"pyext = "0.7"[tool.poetry.dependencies]
pytest = "^7.0.0"annotated-types = "^0.7.0"[tool.poetry.dependencies]
pytest = "^7.0.0"cohere = "^5.5.4"[tool.poetry.dependencies]
pytest = "^7.0.0"[tool.poetry.dependencies]
pytest = "^7.0.0"[tool.poetry.group.with-gpu][tool.poetry.dependencies]
pytest = "^7.0.0"optional = true[tool.poetry.dependencies]
pytest = "^7.0.0"[tool.poetry.dependencies]
pytest = "^7.0.0"[tool.poetry.group.with-gpu.dependencies][tool.poetry.dependencies]
pytest = "^7.0.0"vllm = "^0.4.0.post1"[tool.poetry.dependencies]
pytest = "^7.0.0"[tool.poetry.dependencies]
pytest = "^7.0.0"[build-system][tool.poetry.dependencies]
pytest = "^7.0.0"requires = ["poetry-core"][tool.poetry.dependencies]
pytest = "^7.0.0"build-backend = "poetry.core.masonry.api"[tool.poetry.dependencies]
pytest = "^7.0.0"