[tool.poetry]
name = "livecodebench"
version = "0.1.0"
description = "Official Repository for Evaluation of LiveCodeBench"
authors = ["Naman Jain &lt;naman1205jain@gmail.com&gt;"]
readme = "README.md"
packages = ["lcb_runner", "tests"]

[[tool.poetry.source]]
name = 'pypi_'  # needed until python-poetry/poetry#3456 is resolved.
url = 'https://pypi.org/simple'
priority = 'primary'

[tool.poetry.dependencies]
python = "&gt;=3.10 &lt;4"
pebble = "^5.0.7"
datasets = "^2.18.0"
google-generativeai = "^0.5.0"
anthropic = "^0.25.1"
openai = "^1.17.1"
mistralai = "^0.1.8"
pyext = "0.7"
annotated-types = "^0.7.0"
cohere = "^5.5.4"

[tool.poetry.group.with-gpu]
optional = true

[tool.poetry.group.with-gpu.dependencies]
vllm = "^0.4.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]
